--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "laravel/laravel": "^5.0|^6.0|^7.0|^8.0",
-        "guzzlehttp/guzzle": "^6.3.1|^7.0.1"
+        "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4"
