--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,9 @@
     "description": "Laravel wrapper for Swish",
     "type": "library",
     "minimum-stability": "stable",
+    "prefer-stable": true,
     "require": {
-        "laravel/laravel": "^5.0|^6.0|^7.0|^8.0",
+        "laravel/laravel": "^6.0|^7.0|^8.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "ext-json": "*"
     },
