--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "laravel/framework": "^6.0|^7.0|^8.0",
+        "laravel/framework": "5.8.*|^6.0|^7.0|^8.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "ext-json": "*"
     },
